# lua-gdextension

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct
doc/: LuaCoroutine.xml  LuaError.xml  LuaFunction.xml  LuaLightUserdata.xml  LuaObject.xml  LuaScript.xml  LuaScriptLanguage.xml  LuaScriptResourceFormatLoader.xml  LuaScriptResourceFormatSaver.xml  LuaState.xml  LuaTable.xml  LuaUserdata.xml
doc_classes/: LuaAST.xml  LuaASTNode.xml  LuaASTQuery.xml  LuaCodeEdit.xml  LuaCoroutine.xml  LuaDebug.xml  LuaError.xml  LuaFunction.xml  LuaLightUserdata.xml  LuaObject.xml  LuaParser.xml  LuaScript.xml  LuaScriptLanguage.xml  LuaScriptResourceFormatSaver.xml  LuaState.xml  LuaSyntaxHighlighter.xml  LuaTable.xml  LuaThread.xml  LuaUserdata.xml
documentation/: EN_GUIDE.md  FR_GUIDE.md
examples/: README.md  arrays.lua  export_to_editor.lua  godot_objects.lua  godot_utility_functions.lua  singleton_access.lua
lib/: CMakeLists.txt  Makefile  lua.cpp
src/: LuaAST.cpp  LuaAST.hpp  LuaASTNode.cpp  LuaASTNode.hpp  LuaASTQuery.cpp  LuaASTQuery.hpp  LuaCoroutine.cpp  LuaCoroutine.hpp  LuaDebug.cpp  LuaDebug.hpp  LuaError.cpp  LuaError.hpp  LuaFunction.cpp  LuaFunction.hpp  LuaLightUserdata.cpp  LuaLightUserdata.hpp  LuaObject.cpp  LuaObject.hpp  LuaParser.cpp  LuaParser.hpp  LuaState.cpp  LuaState.hpp  LuaTable.cpp  LuaTable.hpp  LuaThread.cpp  LuaThread.hpp  LuaUserdata.cpp  LuaUserdata.hpp  constants.hpp  custom_sol.cpp  custom_sol.hpp  generate_code.py  godot_utils.cpp  godot_utils.hpp  lua.c  lua.cpp  lua_utils.cpp  lua_utils.hpp  luaopen_godot.cpp  luaopen_godot.hpp  (+3 more)
test/: auto_gc.lua  (+19 more)
(+253 files in other folders)
